--- a/src/Flair/AdminBundle/Resources/config/services.yml
+++ b/src/Flair/AdminBundle/Resources/config/services.yml
@@ -3,7 +3,7 @@ services:
     class: Flair\AdminBundle\Admin\BlockAdmin
     arguments:
         - sonata.block.service.souscategorie
-        - @templating
+        - "@templating"
     tags:
         - { name: sonata.block }
 
