--- a/composer.json
+++ b/composer.json
@@ -4,44 +4,48 @@
     "type": "project",
     "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": { "": "src/" },
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
     },
     "require": {
-        "php": ">=5.3.3",
-        "symfony/symfony": "2.4",
-        "symfony/icu": "1.1.*",
-        "doctrine/orm": "~2.2,>=2.2.3",
-        "doctrine/doctrine-bundle": "~1.2",
+        "php": ">=5.5.9",
+        "symfony/symfony": "3.2.*",
+        "symfony/intl": "v3.2.1",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
         "twig/extensions": "~1.0",
         "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~2.3",
-        "sensio/framework-extra-bundle": "~3.0",
-        "sensio/generator-bundle": "~2.3",
-        "friendsofsymfony/jsrouting-bundle": "1.4.1",
+        "symfony/swiftmailer-bundle": "^2.3",
+        "symfony/monolog-bundle": "^3.0",
+        "sensio/distribution-bundle": "^5.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "sensio/generator-bundle": "v3.1.2",
+        "friendsofsymfony/jsrouting-bundle": "1.6.0",
         "leafo/lessphp": "v0.4.0",
         "lilweb/coffeescript-bundle": "0.0.1",
         "lilweb/extra-bundle": "dev-master",
-        "doctrine/data-fixtures": "v1.0.0",
-        "doctrine/doctrine-fixtures-bundle": "v2.2.0",
-        "doctrine/migrations": "1.1.*@dev",
+        "doctrine/data-fixtures": "v1.2.2",
+        "doctrine/doctrine-fixtures-bundle": "v2.3.0",
+        "doctrine/migrations": "v1.5.0",
         "doctrine/doctrine-migrations-bundle": "dev-master@dev",
-        "egeloen/ckeditor-bundle": "2.1.7",
-        "vich/uploader-bundle": "v0.9.0",
-        "knplabs/knp-gaufrette-bundle": "v0.1.4",
-        "sonata-project/admin-bundle": "2.3.*",
-        "sonata-project/doctrine-orm-admin-bundle": "2.3.*",
+        "egeloen/ckeditor-bundle": "4.0.6",
+        "vich/uploader-bundle": "1.4.0",
+        "knplabs/knp-gaufrette-bundle": "0.3.0",
+        "sonata-project/admin-bundle": "3.10.*",
+        "sonata-project/doctrine-orm-admin-bundle": "3.1.*",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "sonata-project/easy-extends-bundle": "^2.1",
         "dizda/cloud-backup-bundle": "^3.3"
     },
     "require-dev": {
-        "behat/symfony2-extension": "1.1.*",
-        "behat/mink-extension": "1.2.*",
-        "behat/mink-browserkit-driver": "1.1.*",
-        "behat/mink-goutte-driver": "1.0.*",
-        "behat/mink-selenium2-driver": "1.1.*",
+        "behat/symfony2-extension": "2.1.*",
+        "behat/mink-extension": "2.2.*",
+        "behat/mink-browserkit-driver": "1.3.*",
+        "behat/mink-goutte-driver": "1.2.*",
+        "behat/mink-selenium2-driver": "v1.3.1",
         "behat/common-contexts": "1.2.*",
         "phpunit/phpunit": "3.7.*",
         "fzaninotto/faker": "v1.3.0",
