--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -9,7 +9,7 @@ framework:
 
 web_profiler:
     toolbar: true
-    intercept_redirects: true
+    intercept_redirects: false
 
 monolog:
     handlers:
@@ -24,8 +24,7 @@ monolog:
             type:  chromephp
             level: info
 
-assetic:
-    use_controller: true
+
 
 swiftmailer:
     delivery_address: nhnicolasheraly@gmail.com
